--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^5.13.13"
+    "mongoose": "^5.13.13",
+    "pg": "^8.7.1",
+    "sequelize": "^6.12.0-beta.3"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
@@ -33,5 +35,16 @@
   },
   "jest": {
     "testEnvironment": "node"
-  }
+  },
+  "directories": {
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/elsilv/fshy13.git"
+  },
+  "bugs": {
+    "url": "https://github.com/elsilv/fshy13/issues"
+  },
+  "homepage": "https://github.com/elsilv/fshy13#readme"
 }
